--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  * @Author: Li lun
  * @Date: 2022-03-17 15:40:33
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-03-18 19:14:04
+ * @LastEditTime: 2022-03-18 19:47:44
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>像素鸟</title>
-    <link rel="stylesheet" href="/demo.css">
+    <link rel="stylesheet" href="./demo.css">
 </head>
 
 <body>
